@@ -1,7 +1,6 @@
 package org.mobilehub.order_service.service;
 
 import lombok.RequiredArgsConstructor;
-import org.mobilehub.order_service.Mapper.OrderMapper;
 import org.mobilehub.order_service.dto.request.OrderCancelRequest;
 import org.mobilehub.order_service.dto.request.OrderCreateRequest;
 import org.mobilehub.order_service.dto.request.OrderUpdateStatusRequest;
@@ -9,8 +8,10 @@ import org.mobilehub.order_service.dto.response.OrderResponse;
 import org.mobilehub.order_service.dto.response.OrderSummaryResponse;
 import org.mobilehub.order_service.entity.Order;
 import org.mobilehub.order_service.entity.OrderItem;
+import org.mobilehub.order_service.entity.OrderStatus;
 import org.mobilehub.order_service.exception.OrderCannotBeCancelledException;
 import org.mobilehub.order_service.exception.OrderNotFoundException;
+import org.mobilehub.order_service.Mapper.OrderMapper;
 import org.mobilehub.order_service.repository.OrderRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,7 +19,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,17 +30,15 @@ public class OrderService {
 
 
     public OrderResponse createOrder(OrderCreateRequest request) {
-
-        String shippingAddress = "Địa chỉ mặc định " + request.getUserId();
-
+        // Tạo entity Order mới
         Order order = new Order();
         order.setUserId(request.getUserId());
-        order.setShippingAddress(shippingAddress);
+        order.setShippingAddress("Địa chỉ mặc định " + request.getUserId());
         order.setPaymentMethod(request.getPaymentMethod());
-        order.setStatus("PENDING");
+        order.setStatus(OrderStatus.PENDING);
         order.setCreatedAt(LocalDateTime.now());
 
-        // Gán danh sách sản phẩm
+        // Tạo danh sách sản phẩm từ request
         List<OrderItem> items = request.getItems().stream()
                 .map(i -> {
                     OrderItem item = new OrderItem();
@@ -52,7 +50,7 @@ public class OrderService {
                     item.setOrder(order);
                     return item;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         order.setItems(items);
 
@@ -60,15 +58,15 @@ public class OrderService {
         BigDecimal totalAmount = items.stream()
                 .map(i -> i.getPrice().multiply(BigDecimal.valueOf(i.getQuantity())))
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-
         order.setTotalAmount(totalAmount);
 
-        // Lưu vào DB
-        Order saved = orderRepository.save(order);
-        return orderMapper.toOrderResponse(saved);
+        // Lưu và trả về DTO thông qua mapper
+        return orderMapper.toOrderResponse(orderRepository.save(order));
     }
 
-
+    /**
+     * Lấy chi tiết 1 đơn hàng theo ID
+     */
     @Transactional(readOnly = true)
     public OrderResponse getOrderById(Long orderId) {
         Order order = orderRepository.findById(orderId)
@@ -76,16 +74,20 @@ public class OrderService {
         return orderMapper.toOrderResponse(order);
     }
 
-
+    /**
+     * Lấy danh sách đơn hàng của người dùng
+     */
     @Transactional(readOnly = true)
     public List<OrderSummaryResponse> getOrdersByUser(Long userId) {
         return orderRepository.findByUserId(userId)
                 .stream()
-                .map(orderMapper::toSummaryResponse)
-                .collect(Collectors.toList());
+                .map(orderMapper::toSummaryResponse) // ✅ Dùng MapStruct mapper
+                .toList();
     }
 
-
+    /**
+     * Cập nhật trạng thái đơn hàng
+     */
     public OrderResponse updateStatus(Long orderId, OrderUpdateStatusRequest request) {
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new OrderNotFoundException(orderId));
@@ -94,16 +96,18 @@ public class OrderService {
         return orderMapper.toOrderResponse(orderRepository.save(order));
     }
 
-
+    /**
+     * Hủy đơn hàng (chỉ khi đang PENDING)
+     */
     public OrderResponse cancelOrder(Long orderId, OrderCancelRequest request) {
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new OrderNotFoundException(orderId));
 
-        if (!"PENDING".equals(order.getStatus())) {
-            throw new OrderCannotBeCancelledException(order.getStatus());
+        if (order.getStatus() != OrderStatus.PENDING) {
+            throw new OrderCannotBeCancelledException(order.getStatus().name());
         }
 
-        order.setStatus("CANCELLED");
+        order.setStatus(OrderStatus.CANCELLED);
         return orderMapper.toOrderResponse(orderRepository.save(order));
     }
 }
